<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Gallows -->
    <ImageView
        android:id="@+id/imageViewGallows"
        android:layout_width="@dimen/imageView_layout_width"
        android:layout_height="@dimen/imageView_layout_height"
        android:layout_marginTop="@dimen/imageView_layout_marginTop"
        android:contentDescription="@string/description_gallows"
        android:src="@drawable/hangman1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Guesses left till hanging -->
    <TextView
        android:id="@+id/textViewGuessesLeft"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_guesses_left"
        android:textSize="@dimen/textSize_normal"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageViewGallows"
        app:layout_constraintStart_toStartOf="@+id/imageViewGallows"
        app:layout_constraintTop_toBottomOf="@+id/imageViewGallows"
        tools:text="Guesses Left: 7" />

    <!-- Win/Lose message -->
    <TextView
        android:id="@+id/textViewWinLose"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_guesses_left"
        android:textSize="@dimen/textSize_big"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/imageViewGallows"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageViewGallows"
        app:layout_constraintTop_toBottomOf="@+id/textViewGuessesLeft"
        tools:text="YOU WIN/LOSE"
        tools:visibility="visible" />

    <!-- Word to find -->
    <TextView
        android:id="@+id/textViewWordToFind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:letterSpacing="@dimen/letterSpacing"
        android:textSize="@dimen/textSize_normal"
        app:layout_constraintBottom_toTopOf="@+id/layoutAlphabet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewGallows"
        tools:text="Used Letters Placeholder" />

    <!-- Alphabet layout -->
    <include
        android:id="@+id/layoutAlphabet"
        layout="@layout/layout_alphabet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/buttonStart" />

    <!-- Start button -->
    <Button
        android:id="@+id/buttonStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>